name:           rr
version:        0.1
license:        GPL
license-file:   LICENSE
author:         Daniel Corson
synopsis:       repetative-task reminders
build-type:     Simple
build-depends:  FUtil, HDBC, HDBC-postgresql, base, containers, directory,
                process, time, unix

executable:     rr
main-is:        Main.hs
hs-source-dirs: src
