name:           rr
version:        0.1
license:        GPL
license-file:   LICENSE
author:         Daniel Corson
synopsis:       repetative-task reminders
build-type:     Simple
build-depends:
    base
  , containers
  , directory
  , filepath
  , HDBC
  , HDBC-postgresql
  , polyopt
  , process
  , time
  , unix

executable:     rr
main-is:        Main.hs
hs-source-dirs: src
